--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -3,12 +3,6 @@
   <a class="navbar-brand" href="#">
     <img src="assets/imagem/logo.png" >
   </a>
-  <div class="navbar navbar-dark">
-    <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-danger mr-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
   <button class="navbar-toggler"
           type="button"
           data-toggle="collapse"
@@ -24,6 +18,20 @@
         <a class="nav-link" [routerLink]="'produtos'"
            [routerLinkActive]="'active'" >Produtos</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'carrinho'"
+           [routerLinkActive]="'active'" >Carrinho</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'lista-desejos'"
+           [routerLinkActive]="'active'" >Lista de Desejos</a>
+      </li>
     </ul>
+  </div>
+  <div class="navbar navbar-dark">
+    <form class="form-inline">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-danger mr-2 my-sm-0" type="submit">Search</button>
+    </form>
   </div>
 </nav>
