--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -15,10 +15,6 @@
         [routerLinkActive]="'active'" >Página inicial</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="'produtos'"
-           [routerLinkActive]="'active'" >Produtos</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" [routerLink]="'carrinho'"
            [routerLinkActive]="'active'" >Carrinho</a>
       </li>
@@ -30,8 +26,8 @@
   </div>
   <div class="navbar navbar-dark">
     <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-danger mr-2 my-sm-0" type="submit">Search</button>
+      <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Search">
+      <button class="btn btn-outline-danger mr-2 my-sm-0" type="submit">Pesquisar</button>
     </form>
   </div>
 </nav>
