--- a/src/app/componentes/produtos/produtos.component.html
+++ b/src/app/componentes/produtos/produtos.component.html
@@ -1,3 +1,20 @@
-<p>produtos works!</p>
-<img src="..." class="rounded float-start" alt="...">
-<img src="..." class="rounded float-end" alt="...">
+<div class="container mt-5">
+  <div class="row">
+    <!-- Product 1 -->
+    <div class="col-md-4" *ngFor="let product of products [{ name: 'Macbook' }, { name: 'Fone de Ouvido' }, { name: 'Notebook' }]">
+      <div class="card">
+        <img [src]="product.image" class="card-img-top" [alt]="product.name">
+        <div class="card-body text-center">
+          <h5 class="card-title">{{ product.name }}</h5>
+          <p class="card-text">R$ {{ product.price }}</p>
+          <button class="btn btn-primary" (click)="addToCart(product)">Add to Cart</button>
+          <button class="btn btn-outline-secondary mt-2" (click)="addToWishlist(product)">Add to Wishlist</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Cart and Wishlist Components -->
+  <app-carrinho [cartItems]="cart"></app-carrinho>
+  <app-lista-de-desejos [wishlistItems]="wishlist"></app-lista-de-desejos>
+</div>
