--- a/src/app/componentes/carrinho/carrinho.component.html
+++ b/src/app/componentes/carrinho/carrinho.component.html
@@ -1,1 +1,29 @@
-<p>carrinho works!</p>
+<main class="col-md-6 offset-md-3">
+  <h1 class="text-center mb-4 mt-4">
+    Seu Carrinho
+  </h1>
+  <section class="cart-items">
+    <div class="card mb-3">
+      <div class="row g-0 align-items-center">
+        <div class="col-md-2">
+          <img src="assets/imagem/product08.png" class="img-fluid rounded-start" alt="Item Name">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Notebook</h5>
+            <p class="card-text">Quantidade: 1</p>
+            <p class="card-text">Preço: R$ 1000.00</p>
+          </div>
+        </div>
+        <div class="col-md-2 text-center">
+          <button class="btn btn-danger">Remover</button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <aside class="cart-summary text-center mt-5">
+    <h2>Resumo do Pedido</h2>
+    <p>Total: R$ 1000.00</p>
+    <button class="btn btn-primary">Finalizar Compra</button>
+  </aside>
+</main>
