--- a/src/app/componentes/pagina-inicial/pagina-inicial.component.html
+++ b/src/app/componentes/pagina-inicial/pagina-inicial.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-6 offset-md-3">
+<main class="col-md-6 offset-md-3">
   <h1 class="text-center mb-4 mt-4">
     Novos produtos
   </h1>
@@ -6,12 +6,12 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card">
-          <img src="assets/imagem/product01.png" class="card-img-top" alt="Macbook">
+          <img src="assets/imagem/product08.png" class="card-img-top" alt="Macbook">
           <div class="card-body text-center">
-            <h5 class="card-title">Macbook</h5>
-            <p class="card-text">R$ 5000,00</p>
-            <button class="btn btn-primary" (click)="addToCart('Macbook')">Add to Cart</button>
-            <button class="btn btn-outline-secondary mt-2" (click)="addToWishlist('Macbook')">Add to Wishlist</button>
+            <h5 class="card-title">Notebook</h5>
+            <p class="card-text">R$ 1000,00</p>
+            <button class="btn btn-primary" (click)="addToCart('Notebook')">Add Carrinho</button>
+            <button class="btn btn-outline-secondary mt-2" (click)="addToWishlist('Notebook')">Add Lista de Desejos</button>
           </div>
         </div>
       </div>
@@ -21,8 +21,8 @@
           <div class="card-body text-center">
             <h5 class="card-title">Fone de Ouvido</h5>
             <p class="card-text">R$ 500,00</p>
-            <button class="btn btn-primary" (click)="addToCart('Fone de Ouvido')">Add to Cart</button>
-            <button class="btn btn-outline-secondary mt-2" (click)="addToWishlist('Fone de Ouvido')">Add to Wishlist</button>
+            <button class="btn btn-primary" (click)="addToCart('Fone de Ouvido')">Add Carrinho</button>
+            <button class="btn btn-outline-secondary mt-2" (click)="addToWishlist('Fone de Ouvido')">Add Lista de Desejos</button>
           </div>
         </div>
       </div>
@@ -30,15 +30,16 @@
         <div class="card">
           <img src="assets/imagem/product03.png" class="card-img-top" alt="Notebook">
           <div class="card-body text-center">
-            <h5 class="card-title">Notebook</h5>
-            <p class="card-text">R$ 2000,00</p>
-            <button class="btn btn-primary" (click)="addToCart('Notebook')">Add to Cart</button>
-            <button class="btn btn-outline-secondary mt-2" (click)="addToWishlist('Notebook')">Add to Wishlist</button>
+            <h5 class="card-title">Macbook</h5>
+            <p class="card-text">R$ 5000,00</p>
+            <button class="btn btn-primary" (click)="addToCart('Macbook')">Add Carrinho</button>
+            <button class="btn btn-outline-secondary mt-2" (click)="addToWishlist('Macbook')">Add Lista de Desejos</button>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+</main>
+
 
 
